--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Cinezaster/Serial_EtchASketch2Web",
   "dependencies": {
+    "handlebars": "^3.0.0",
     "hapi": "^8.4.0",
     "serialport": "^1.6.3",
     "socket.io": "^1.3.5"
