--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "Serial_EtchASketch2Web",
-  "version": "1.0.0",
+  "name": "serial_etch-a-sketch-2-web",
+  "version": "2.0.0",
   "description": "Receive Serial x,y signal from an arduino and draw an image on a webpage and share over twitter.",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -21,11 +22,23 @@
   "bugs": {
     "url": "https://github.com/Cinezaster/Serial_EtchASketch2Web/issues"
   },
+  "eslintConfig": {
+    "extends": "standard"
+  },
   "homepage": "https://github.com/Cinezaster/Serial_EtchASketch2Web",
   "dependencies": {
-    "handlebars": "^3.0.0",
-    "hapi": "^18.1.0",
-    "serialport": "^1.6.3",
-    "socket.io": "^1.3.5"
+    "express": "^4.17.1",
+    "express-handlebars": "^5.1.0",
+    "midi-converter": "^0.1.5",
+    "serialport": "^9.0.1",
+    "socket.io": "^2.3.0"
+  },
+  "devDependencies": {
+    "eslint": "^7.7.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
